{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 28,
  "lineage": "705ccda9-6842-1238-e887-d02520aabcaa",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-TF",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:internet-gateway/igw-0b902ea29d00bacc2",
            "id": "igw-0b902ea29d00bacc2",
            "owner_id": "225908212644",
            "vpc_id": "vpc-076c89b9c6af7cb9e"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ssh",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:security-group/sg-0a405028420cd3965",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a405028420cd3965",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-ssh",
            "name_prefix": "",
            "owner_id": "225908212644",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-076c89b9c6af7cb9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-traffic",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:security-group/sg-092e09347ac1ef740",
            "description": "Allow WEB traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092e09347ac1ef740",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Secure WEB traffic Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow WEB traffic Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-web",
            "name_prefix": "",
            "owner_id": "225908212644",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow WEB Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-076c89b9c6af7cb9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "custom_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:subnet/subnet-0e83b4e9d52ae4c1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e83b4e9d52ae4c1d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225908212644",
            "tags": {
              "Name": "Custom subnet"
            },
            "tags_all": {
              "Name": "Custom subnet"
            },
            "vpc_id": "vpc-076c89b9c6af7cb9e"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:vpc/vpc-076c89b9c6af7cb9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02cbc644a1e470e19",
            "default_route_table_id": "rtb-0feb7e04f9fe89963",
            "default_security_group_id": "sg-02aecaa9d670fbf7a",
            "dhcp_options_id": "dopt-ff341285",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-076c89b9c6af7cb9e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0feb7e04f9fe89963",
            "owner_id": "225908212644",
            "tags": {
              "Name": "Custom VPC"
            },
            "tags_all": {
              "Name": "Custom VPC"
            }
          }
        }
      ]
    }
  ]
}